--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>Contact Me</h1>
-                            <span class="subheading">Have questions? I have answers.</span>
+                            <span class="subheading"></span>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                        <p>Fill out the form below and I will get back to you as soon as possible</p>
                         <div class="my-5">
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
@@ -139,7 +139,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic"></div>
                     </div>
                 </div>
             </div>
