--- a/projects.html
+++ b/projects.html
@@ -46,48 +46,31 @@
                 </div>
             </div>
         </header>
-        <!-- Post Content-->
+        <!-- Project Explanations/Links-->
         <div class="projects">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-
-                      <div class="animated flipInX" style="animation-duration: 1s; opacity: 1;">
-                        <div class="project">
-                          <header>
-                            <svg width="50" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="#23ce6b " stroke-width="1" stroke-linecap="round" stroke-linejoin="round" style="--darkreader-inline-stroke: #43df85;" data-darkreader-inline-stroke="">
-                              <title>Folder</title>
-                              <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-                            </svg>
-                            <div class="project-links">
-                              <a href="https://github.com/CodeVinayak/MediBook-Medical-Appointment-Scheduler-with-Health-History" target="_blank" rel="noreferrer">
-                                <img src="/static/media/github.d344c0fc70ddfb6de253ddc40adcb086.svg" alt="Visit site">
-                              </a>
-                              <a href="https://medibook.vinayaksingh.com" target="_blank" rel="noreferrer">
-                                <img src="/static/media/external-link.74ce2401d684101cc83125c6dac8ce9c.svg" alt="Visit site">
-                              </a>
-                            </div>
-                          </header>
-                          <div class="body">
-                            <h3>MediBook: Medical Appointment Scheduler with Health History</h3>
-                            <p>Developed a secure medical appointment management platform with CRUD functionality, utilizing role-based access control, encryption techniques, and a robust MySQL database with normalized schema design and stored procedures for efficient scheduling, data privacy, and reliable retrieval of patient records.</p>
-                          </div>
-                          <footer>
-                            <ul class="tech-list">
-                              <li>PHP</li>
-                              <li>HTML</li>
-                              <li>CSS</li>
-                              <li>MySQL</li>
-                            </ul>
-                          </footer>
-                        </div>
-                      </div>
-
-
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-4 col-sm-6 project-tile">
+                <a href="https://github.com/your-repo1" target="_blank" class="github-link">
+                    <div class="project-content">
+                        <h3>Project 1</h3>
+                        <p>This is a description of the first project.</p>
                     </div>
-                </div>
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6 project-tile">
+                <a href="https://github.com/your-repo2" target="_blank" class="github-link">
+                    <div class="project-content">
+                        <h3>Project 2</h3>
+                        <p>This is a description of the second project.</p>
+                    </div>
+                </a>
+            </div>
+            <!-- Repeat for more projects -->
             </div>
         </div>
+    </div>
+
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
