--- a/allPosts.html
+++ b/allPosts.html
@@ -39,8 +39,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Jesse Morales</h1>
-                            <span class="subheading">CS Undergrad</span>
+                            <h1>All Posts</h1>
+                            <span class="subheading">Everything I have written</span>
                         </div>
                     </div>
                 </div>
@@ -86,8 +86,6 @@
                     </div>
                     <!-- Divider-->
                     <hr class="my-4" />
-                    <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="./allPosts.html">Older Posts →</a></div>
                 </div>
             </div>
         </div>
