--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
             </div>
         </header>
         <!-- Project Explanations/Links-->
-        <div class="projects">
-    <div class="container px-4 px-lg-5">
+    <div class="projects">
+      <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-4 col-sm-6 project-tile">
                 <a href="https://github.com/your-repo1" target="_blank" class="github-link">
@@ -68,8 +68,24 @@
                 </a>
             </div>
             <!-- Repeat for more projects -->
+            <div class="col-md-4 col-sm-6 project-tile">
+                <a href="https://github.com/your-repo2" target="_blank" class="github-link">
+                    <div class="project-content">
+                        <h3>Project 3</h3>
+                        <p>This is a description of the third project.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6 project-tile">
+                <a href="https://github.com/your-repo2" target="_blank" class="github-link">
+                    <div class="project-content">
+                        <h3>Project 4</h3>
+                        <p>This is a description of the fourth project.</p>
+                    </div>
+                </a>
             </div>
         </div>
+      </div>
     </div>
 
         <!-- Footer-->
